--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,8 +1,7 @@
 <header class="header">
   <div class="container header__wrp">
     <div class="header__container">
-      <!--      <img class="header__container-logo" src="src/img/icons/logo1.svg" alt="logo">-->
-      <svg width="96" height="90" viewBox="0 0 96 90" fill="none"
+      <svg classs="header__svg" width="96" height="90" viewBox="0 0 96 90" fill="none"
            xmlns="http://www.w3.org/2000/svg">
         <path
           d="M72.0555 49.262C61.9447 69.4235 45.5404 79.1512 31.7115 78.1097C22.5626 77.4207 14.5266 71.7228 15.1808 56.8081C8.57623 74.0219 15.9897 89.1262 34.5957 87.0166C53.5459 85.1603 70.4695 66.0376 72.0555 49.262V49.262Z"
@@ -50,19 +49,19 @@
         <a class="header__link" href="#">Контакты</a>
       </li>
     </ul>
-    <div class="header__contacts">
-      <div class="header__contacts__logo">
-        <svg class="header__tel--svg" xmlns="http://www.w3.org/2000/svg"
+    <div class="header__contacts contacts">
+      <div class="contacts__logo">
+        <svg class="contacts__tel--svg" xmlns="http://www.w3.org/2000/svg"
              viewBox="0 0 512 512">
           <path
             d="M511.2 387l-23.25 100.8c-3.266 14.25-15.79 24.22-30.46 24.22C205.2 512 0 306.8 0 54.5c0-14.66 9.969-27.2 24.22-30.45l100.8-23.25C139.7-2.602 154.7 5.018 160.8 18.92l46.52 108.5c5.438 12.78 1.77 27.67-8.98 36.45L144.5 207.1c33.98 69.22 90.26 125.5 159.5 159.5l44.08-53.8c8.688-10.78 23.69-14.51 36.47-8.975l108.5 46.51C506.1 357.2 514.6 372.4 511.2 387z"/>
         </svg>
       </div>
-      <div class="header__contacts--tel">
-        <a class="header__tel" href="tel:+78632403540">+7 (863) <span
-          class="header__tel--bold">240-35-40</span></a>
-        <a class="header__tel" href="tel:+78632079288">+7 (863) <span
-          class="header__tel--bold">207-92-88</span></a>
+      <div class="contacts--tel">
+        <a class="tel" href="tel:+78632403540">+7 (863) <span
+          class="tel--bold">240-35-40</span></a>
+        <a class="tel" href="tel:+78632079288">+7 (863) <span
+          class="tel--bold">207-92-88</span></a>
       </div>
     </div>
   </div>
