--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   @@include('html/suppliers.html',{})
   @@include('html/customer.html',{})
   @@include('html/design.html',{})
+  @@include('html/contacts.html',{})
 </main>
 @@include('html/yandexMap.html',{})
 @@include('html/footer.html',{})
